@@ -41,9 +41,8 @@ makeDownsampleWrapper = function(learner, dw.perc = 1, dw.stratify = FALSE) {
 #' @export
 trainLearner.DownsampleWrapper = function(.learner, .task, .subset, .weights = NULL,
   dw.perc = 1, dw.stratify = TRUE, ...) {
-
   .task = subsetTask(.task, .subset)
   .task = downsample(.task, perc = dw.perc, stratify = dw.stratify)
-  m = train(.learner$next.learner, .task, weights = .weights)
+  m = train(.learner$next.learner, .task, weights = .task$weights)
   makeChainModel(next.model = m, cl = "DownsampleModel")
 }
